# blackmetal

./: Cargo.toml  build.rs
blackmetal-build/: Cargo.toml
examples/: hello.rs
src/: command.rs  device.rs  drawable.rs  instance.rs  lib.rs  render.rs
src/metalshaper/: apple_ir.rs  mod.rs
