[package]
name = "blackmetal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
raw-window-handle = "0.6.2"
ash = { version = "0.38.0", optional = true }
ash-window = { version = "0.13.0", optional = true }
crossbeam = "0.8.4"

[build-dependencies]
blackmetal-build = { path = "./blackmetal-build/" }

[features]
default = []
moltenvk = ["dep:ash", "dep:ash-window"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6.1"
objc2-metal = "0.3.1"
objc2-quartz-core = "0.3.1"
raw-window-metal = "1.1.0"

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
